--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
         <p>Download on <a href="https://dj3maj.bandcamp.com/track/daft-punk-veridis-quo-dj-3maj-remix" target="_blank">bandcamp</a>.</p>
       </article>
 
+      <article id="tropical-explosion">
+        <h2>Tropical Explosion</h2>
+        <p class="about">Beats I had the most fun listening condensed into 20 minutes long ear candy. Enjoy!</p>
+        <iframe src="https://www.youtube.com/embed/CysO3uadhtg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
+        <details>
+          <summary>Tracklist</summary>
+          <ol>
+            <li><a href="http://soundcloud.com/andersonpaak" target="_blank">Anderson .Paak</a> - Reachin' 2 Much ( Instrumental ) </li>
+            <li><a href="http://soundcloud.com/dj-captain-planet" target="_blank">Captain Planet</a> - Patty Cake</li>
+            <li><a href="http://soundcloud.com/flamingosis" target="_blank">Flamingosis</a> - Two Steppin' Into Fantasy</li>
+            <li><a href="http://soundcloud.com/kaidi-kat" target="_blank">Kaidi Tatham</a> - Sooner or Later</li>
+            <li><a href="http://soundcloud.com/the-kount" target="_blank">The Kount</a> - Make It Happen</li>
+            <li><a href="http://soundcloud.com/kaytranada" target="_blank">Kaytranada</a> - Despite The Weather</li>
+            <li><a href="http://soundcloud.com/flamingosis" target="_blank">Flamingosis</a> - A Groovy Thing</li>
+            <li><a href="http://soundcloud.com/gramatik" target="_blank">Gramatik</a> - Funk It Up</li>
+          </ol>
+        </details>
+      </article>
+
     <article id="hunger-and-strife">
       <h2>Hunger and Strife</h2>
       <p class="about">Layered percussion, ominous ambiance, and unforgiving hard drums provide the perfect club workout.</p>
