--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header>
     <h1 class="title">DJ 3maj's Mixtapes</h1>
     <nav>
-      <a href="https://www.instagram.com/jazar_todorovic" target="_blank">Instagram</a>
+      <a href="https://www.instagram.com/jazar_todorovic/" target="_blank">Instagram</a>
       <a href="https://soundcloud.com/sablast" target="_blank">Soundcloud</a>
       <a href="https://dj3maj.bandcamp.com/" target="_blank">Bandcamp</a>
       <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA" target="_blank">YouTube</a>
