--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
       <a href="https://www.mixcloud.com/dj-3maj" target="_blank">Mixcloud</a>
     </nav>
   </header>
+  <article>
+    <h2>DJ 3maj - Meaning Crisis</h2>
+    
+    <iframe class="bandcamp-embed" style="border: 0; width: 330px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=3853726637/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="https://dj3maj.bandcamp.com/album/meaning-crisis">Meaning Crisis by DJ 3maj</a></iframe>
+  
+    <p class="about album-desc">
+      I'm not going to tell you a story. What's behind my music is only expressed through it, otherwise, it be expressed with words in a book. 
+      <br><br>
+      When I was young I would listen to songs with English lyrics without knowing English. In spite of that I connected deeply with the meaning I felt while listening and remembering them. Later when I learned enough English to understand, lyrics betrayed the meaning I felt. Aren't musicians supposed to determine the meaning of their songs?
+      <br><br>
+      No... but that's when I suspected I may be a musician.
+      <br><br>
+      Damn it. I couldn't help but tell a story.
+      <br>
+      <br>
+      <small>released December 3, 2021 <br> <br> "A view from nowhere" is performed by Brian Barber. <br>Composed, mixed and mastered by Lazar Todorović. </small>
+    </p>
+  </article>
 
   <main>
     <article>
@@ -66,6 +84,7 @@
         </details>
       </article>
 
+     
     <article id="hunger-and-strife">
       <h2>Hunger and Strife</h2>
       <p class="about">Layered percussion, ominous ambiance, and unforgiving hard drums provide the perfect club workout.</p>
