added spotifty artist profile nav link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h1 class="title">DJ 3maj's Mixtapes</h1>
     <nav>
       <a href="https://www.instagram.com/jazar_todorovic/" target="_blank">Instagram</a>
+      <a href="https://open.spotify.com/artist/0BTM5Hw0FHPXB8sqMddLqk" target="_blank">Spotify</a>
       <a href="https://soundcloud.com/sablast" target="_blank">Soundcloud</a>
       <a href="https://dj3maj.bandcamp.com/" target="_blank">Bandcamp</a>
       <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA" target="_blank">YouTube</a>
