--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>DJ 3maj - Meaning Crisis</h2>
       
       <iframe class="bandcamp-embed" style="border: 0; width: 330px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=3853726637/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="https://dj3maj.bandcamp.com/album/meaning-crisis">Meaning Crisis by DJ 3maj</a></iframe>
-    
+      <p><small><a href="https://github.com/Zaokret/meaning-crisis" target="_blank">Click here to listen on other streaming platforms</a></a></small></p>
       <p class="about album-desc">
         I'm not going to tell you a story. What's behind my music is only expressed through it, otherwise, it be expressed with words in a book. 
         <br><br>
