Vapor Breathing Wave Surfing Dragon

--- a/index.html
+++ b/index.html
@@ -73,6 +73,34 @@
       </article>
       
       <article>
+        <h2>Vapor Breathing Wave Surfing Dragon</h2>
+        <p class="about">Let me take you beyond the horizon of everyday musical experience, into ecstasy. We start with some extremely fresh vaporwave and future funk, continue into funky house and end with french house.</p>
+        <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1186339342&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+        <details>
+          <summary>Tracklist</summary>
+          <ol>
+            <li><a href="https://soundcloud.com/duettmusic" target="_blank">DUETT</a> - Feelings</li>
+            <li><a href="https://alpiine.bandcamp.com" target="_blank">Alpiine</a> - Midnight</li>
+            <li><a href="https://soundcloud.com/skykot" target="_blank">Skykot</a> - Supremacy</li>
+            <li><a href="https://soundcloud.com/notrhodes" target="_blank">Rhodes Rodosu</a> - Luna</li>
+            <li><a href="https://soundcloud.com/birocratic" target="_blank">Birocratic</a> - Extra Fresh</li>
+            <li><a href="https://soundcloud.com/melon-ade" target="_blank">Mélonade </a> - Let You Know</li>
+            <li><a href="https://soundcloud.com/thoughts-7" target="_blank">ConsciousThoughts</a> - Sippin'</li>
+            <li><a href="https://soundcloud.com/uppermost" target="_blank">Uppermost</a> - Fireflies</li>
+            <li><a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi" target="_blank">Daft Punk</a> - Too Long</li>
+            <li><a href="https://soundcloud.com/madeon" target="_blank">Madeon</a> - Icarus</li>
+            <li><a href="https://soundcloud.com/2emedanger" target="_blank">DANGER</a> - 4h30</li>
+            <li><a href="https://soundcloud.com/notrhodes" target="_blank">Rhodes Rodosu</a> - Portal</li>
+            <li><a href="https://open.spotify.com/artist/3qwabfaWewpfli7hMNM3O8" target="_blank">Róisín Murphy</a>  - We Got Together</li>
+            <li><a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi" target="_blank">Daft Punk</a> - Da Funk</li>
+            <li><a href="https://open.spotify.com/artist/5tOWIviwLM1EIqGAbF8VSU" target="_blank">SebastiAn</a> - Walkman</li>
+            <li><a href="https://open.spotify.com/artist/3eMRhrlKRHoJGeDEivWLjX" target="_blank">LemKuuja</a> & <a href="https://open.spotify.com/artist/6KZPX4NTyT88rfaLznAtrn" target="_blank">Husky</a> - Light</li>
+            <li><a href="https://soundcloud.com/deejmd" target="_blank">DEEJMD</a> - The Truth</li>
+          </ol>
+        </details>
+      </article>
+
+      <article>
         <h2>Everyday Magic</h2>
         <p class="about">An eclectic mix that reflects more on my everyday listening experience.</p>
         <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1194321622&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
