--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <article>
         <h2>Vapor Breathing Wave Surfing Dragon</h2>
         <p class="about">Let me take you beyond the horizon of everyday musical experience, into ecstasy. We start with some extremely fresh vaporwave and future funk, continue into funky house and end with french house.</p>
-        <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1186339342&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+        <iframe src="https://www.youtube.com/embed/zBKvTd7up_c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class="about">This awesome cover photo was made by the beautiful <a href="https://amio-mon.com/" target="_blank">AMIO MON</a></p>
         <details>
           <summary>Tracklist</summary>
