--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
       </article>
 
       <article>
-        <h2>Everyday Magic</h2>
-        <p class="about">An eclectic mix that reflects more on my everyday listening experience.</p>
-        <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1194321622&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+        <h2>Unleashing Chaos</h2>
+        <iframe src="https://www.youtube.com/embed/-vw9e2Dga90" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <details>
           <summary>Tracklist</summary>
           <ol>
@@ -121,6 +120,7 @@
             <li>Cult Of Luna & Julie Christmas - A Greater Call</li>
             <li>Alcest - Eclosion</li>
             <li>Elder - Lore</li>
+            <li>Ichiko Aoba - 霧鳴島</li>
           </ol>
         </details>
       </article>
