linked two tracklists to spotify

--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
         <details>
           <summary>Tracklist</summary>
           <ol>
-            <li>Agnes Obel - The Curse</li>
-            <li>Agnes Obel - Aventine</li>
-            <li>Radiohead - Burn The Witch</li>
-            <li>Ichiko Aoba - Chinuhaji</li>
-            <li>Philip Glass Ensemble - Floe</li>
-            <li>Japanese Breakfast - Posing In Bondage</li>
-            <li>KIRINJI - 爆ぜる心臓 feat. Awich (Exploding Heart)</li>
-            <li>Oksami - Arrival</li>
-            <li>Sufjan Stevens - To The Workers of The Rock River Valley Region, <br>I have an idea concerning your predicament, <br>and it involves an inner tube, <br>bath mats, and 21 able-bodied men</li>
-            <li>The Brilliance - Does Your Heart Break?</li>
-            <li>Cult Of Luna & Julie Christmas - A Greater Call</li>
-            <li>Alcest - Eclosion</li>
-            <li>Elder - Lore</li>
-            <li>Ichiko Aoba - 霧鳴島</li>
+            <li><a href="https://open.spotify.com/artist/1rKrEdI6GKirxWHxIUPYms" target="_blank">Agnes Obel</a> - The Curse</li>
+            <li><a href="https://open.spotify.com/artist/1rKrEdI6GKirxWHxIUPYms" target="_blank">Agnes Obel</a> - Aventine</li>
+            <li><a href="https://open.spotify.com/artist/4Z8W4fKeB5YxbusRsdQVPb" target="_blank">Radiohead</a> - Burn The Witch</li>
+            <li><a href="https://open.spotify.com/artist/6ignRjbPmLvKdtMLj9a5Xs" target="_blank">Ichiko Aoba</a> - Chinuhaji</li>
+            <li><a href="https://open.spotify.com/artist/3d8ZNJ7en7Rf9cnI9U8gbp" target="_blank">Philip Glass Ensemble</a> - Floe</li>
+            <li><a href="https://open.spotify.com/artist/7MoIc5s9KXolCBH1fy9kkw" target="_blank">Japanese Breakfast</a> - Posing In Bondage</li>
+            <li><a href="https://open.spotify.com/artist/0O1UtbTe4ca7HabaiMhYZ7" target="_blank">KIRINJI</a> - 爆ぜる心臓 feat. <a href="https://open.spotify.com/artist/0FnDCrmcQT8qz5TEsZIYw5" target="_blank">Awich</a> (Exploding Heart)</li>
+            <li><a href="https://open.spotify.com/artist/1b0Xogb0sa1XfgUXFWPb26" target="_blank">Oksami</a> - Arrival</li>
+            <li><a href="https://open.spotify.com/artist/4MXUO7sVCaFgFjoTI5ox5c" target="_blank">Sufjan Stevens</a> - To The Workers of The Rock River Valley Region, <br>I have an idea concerning your predicament, <br>and it involves an inner tube, <br>bath mats, and 21 able-bodied men</li>
+            <li><a href="https://open.spotify.com/artist/26nltVmOVeIfYmwcmqTm7e" target="_blank">The Brilliance</a> - Does Your Heart Break?</li>
+            <li><a href="https://open.spotify.com/artist/7E7fJJpdVgr1F3pfAfRtHe" target="_blank">Cult Of Luna</a> & <a href="https://open.spotify.com/artist/4rHZDNrVu2XkdO7eysOHei" target="_blank">Julie Christmas</a> - A Greater Call</li>
+            <li><a href="https://open.spotify.com/artist/0d5ZwMtCer8dQdOPAgWhe7" target="_blank">Alcest</a> - Eclosion</li>
+            <li><a href="https://open.spotify.com/artist/1687IqXRdWmbRshgn194tT" target="_blank">Elder</a> - Lore</li>
+            <li><a href="https://open.spotify.com/artist/6ignRjbPmLvKdtMLj9a5Xs" target="_blank">Ichiko Aoba</a> - 霧鳴島</li>
           </ol>
         </details>
       </article>
@@ -188,21 +188,21 @@
       <details>
         <summary>Tracklist</summary>
         <ol>
-          <li>The Universe Wakes Up by The Comet Is Coming</li>
-          <li>Turn The Light On by Julia Holter</li>
-          <li>Enough by Kelela</li>
-          <li>Petal by Raveena</li>
-          <li>Somewhere Over The Rainbow Cover by Tommy Emmanuel</li>
-          <li>Unstoppable by Lianne LaHavas ( Acoustic Version )</li>
-          <li>River by Leon Bridges ( Acoustic Version )</li>
-          <li>To Be Alone by Hozier</li>
-          <li>River Take Me by Darrell Scott</li>
-          <li>Destination by Nickel Creek</li>
-          <li>Day And Age by Julian Lage</li>
-          <li>Too Hot To Last by Snarky Puppy feat. Lucy Woodward</li>
-          <li>Late Nights & Heartbreak by Hannah Williams & The Affirmations</li>
-          <li>Just As Strange by Tedeschi Trucks Band</li>
-          <li>Don't Lose Sight by Lawrence ( Acoustic Version )</li>
+          <li><a href="https://open.spotify.com/artist/0Z5FMozvx15nUSUA6a9kkU" target="_blank" rel="noopener noreferrer">The Comet Is Coming</a> - The Universe Wakes Up</li>
+          <li><a href="https://open.spotify.com/artist/0bsV0sUjnCuCTYOnNHQl3E" target="_blank" rel="noopener noreferrer">Julia Holter</a> - Turn The Light On</li>
+          <li><a href="https://open.spotify.com/artist/1U0sIzpRtDkvu1hXXzxh60" target="_blank" rel="noopener noreferrer">Kelela</a> - Enough </li>
+          <li><a href="https://open.spotify.com/artist/2kQnsbKnIiMahOetwlfcaS" target="_blank" rel="noopener noreferrer">Raveena</a> - Petal</li>
+          <li><a href="https://open.spotify.com/artist/6HjfVflhYjbu6PSIsFOjwM" target="_blank" rel="noopener noreferrer">Tommy Emmanuel</a> - Somewhere Over The Rainbow ( Accoustic Cover )</li>
+          <li><a href="https://open.spotify.com/artist/2RP4pPHTXlQpDnO9LvR7Yt" target="_blank" rel="noopener noreferrer">Lianne LaHavas</a> - Unstoppable ( Acoustic Version )</li>
+          <li><a href="https://open.spotify.com/artist/3qnGvpP8Yth1AqSBMqON5x" target="_blank" rel="noopener noreferrer">Leon Bridges</a> - River ( Acoustic Version )</li>
+          <li><a href="https://open.spotify.com/artist/2FXC3k01G6Gw61bmprjgqS" target="_blank" rel="noopener noreferrer">Hozier</a> - To Be Alone</li>
+          <li><a href="https://open.spotify.com/artist/1qMgGon16RoDAfujk41Em0" target="_blank" rel="noopener noreferrer">Darrell Scott</a> - River Take Me</li>
+          <li><a href="https://open.spotify.com/artist/3bcLBxvaI7GsBzGp3WHnwQ" target="_blank" rel="noopener noreferrer">Nickel Creek</a> - Destination</li>
+          <li><a href="https://open.spotify.com/artist/2TSuAchdgVzsAa9wDK1IeT" target="_blank" rel="noopener noreferrer">Julian Lage</a> - Day And Age</li>
+          <li><a href="https://open.spotify.com/artist/7ENzCHnmJUr20nUjoZ0zZ1" target="_blank" rel="noopener noreferrer">Snarky Puppy</a> - Too Hot To Last feat. <a href="https://open.spotify.com/artist/1hQaXAeGO0y6sQYLqdfErE" target="_blank" rel="noopener noreferrer">Lucy Woodward</a></li>
+          <li><a href="https://open.spotify.com/artist/0unydCSm9ARiINdrNqugDg" target="_blank" rel="noopener noreferrer">Hannah Williams</a> & <a href="https://open.spotify.com/artist/5TyLR1qi5Fbv5mlsy5329g" target="_blank" rel="noopener noreferrer">The Affirmations</a> - Late Nights & Heartbreak</li>
+          <li><a href="https://open.spotify.com/artist/2gFsmDBM0hkoZPmrO5EdyO" target="_blank" rel="noopener noreferrer">Tedeschi Trucks Band</a> - Just As Strange</li>
+          <li><a href="https://open.spotify.com/artist/5rwUYLyUq8gBsVaOUcUxpE" target="_blank" rel="noopener noreferrer">Lawrence</a> - Don't Lose Sight ( Acoustic Version )</li>
         </ol>
       </details>
     </article>
