removed waking up

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <p>Awesome illustration was done by <a href="https://surudenise.com" target="_blank">Denise Rashidi</a>.</p>
       </article>
 
-      <article class="waking-up">
+      <!-- <article class="waking-up">
         <h2>Waking Up</h2>
         <p class="about">This is the music I play to start my day. Good vibes and gradual build-up of energy. Enjoy!</p>
         <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1124593771&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
@@ -296,7 +296,7 @@
             <li>Sing a Simple Song by Sly & The Family Stone</li>
           </ol>
         </details>
-      </article>
+      </article> -->
 
       <article>
         <h2>Hali Gali: The New Alternative</h2>
