added gatecrash and batman

--- a/index.html
+++ b/index.html
@@ -41,6 +41,60 @@
   <main>
 
     <article>
+      <h2>Gatecrash</h2>
+      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1244190727&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+      <p class="about album-desc">Gatecrashed 50th birthday of a Lift club owner. <br><br>10/10 would do it again. <br><br> <h3><strong>L I F T</strong></h3> <a href="https://soundcloud.com/liftbg" target="_blank">SoundCloud</a><br><a href="https://www.instagram.com/liftbg/" target="_blank">Instagram</a></p>
+    </article>
+
+    <article>
+      <h2>The Batman 2022 Nightclub Iceberg Lounge Soundtrack Mixtape</h2>
+      <iframe src="https://www.youtube.com/embed/OwU6zcpOml4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p >This is what I would play in a peak time slot in Iceberg Lounge ( Printworks ) <br><br> Contains 4 club tracks from The Batman 2022 movie:</p>
+      <ul>
+        <li>Corvad - <a href="https://youtu.be/u9kBicOzmuE" target="_blank">Tesla</a></li>
+        <li>Baauer - <a href="https://youtu.be/IOGsX5-MBqA" target="_blank">HOT 44</a></li>
+        <li>Patrick Topping & Kevin Saunderson - <a href="https://youtu.be/WC03Bh7Z12Y" target="_blank">Frisk</a> </li>
+        <li>Alesso - <a href="https://youtu.be/s6Im2QQIz0c" target="_blank">Dark</a></li>
+      </ul>
+
+      <p>One club track from the movie didn't make it into the mix: Peggy Gou - <a href="https://youtu.be/HdB4wPepfH4" target="_blank">In Sum</a></p>
+
+      <p>Read what mixmag got to say about Iceberg Lounge<br>
+      <a href="https://mixmag.asia/feature/the-batman-iceberg-lounge-investigation-club" target="_blank">WOULD WE HAVE A GOOD NIGHT OUT AT THE BATMAN’S ICEBERG LOUNGE? — AN INVESTIGATION</a></p>
+      <p>
+        Book an upcoming show in Printworks: <br>
+        <a href="https://printworkslondon.co.uk/whats-on/" target="_blank">Calendar of upcoming shows</a>
+      </p>
+      <br>
+      <details>
+        <summary>Tracklist</summary>
+        <ul>
+          <li>00:00 <a href="https://soundcloud.com/corvad" target="_blank">Corvard</a> - Tesla</li>
+          <li>04:05 <a href="https://soundcloud.com/ghost-dance-1" target="_blank">Ghost Dance</a> - Raving</li>
+          <li>05:08 <a href="https://soundcloud.com/t78official" target="_blank">T78</a> & <a href="https://soundcloud.com/raitobeats" target="_blank">Raito</a> - Acid People</li>
+          <li>09:35 <a href="https://soundcloud.com/mha_iri" target="_blank">Mha Iri</a> - Open Up</li>
+          <li>15:01 <a href="https://soundcloud.com/jay-lumen-official" target="_blank">Jay Lumen</a> - Terra</li>
+          <li>18:13 <a href="https://soundcloud.com/nonameleftmusic" target="_blank">NoNameLeft </a> - The Second Law of Thermodynamics</li>
+          <li>20:39 <a href="https://soundcloud.com/kaspar-de" target="_blank">Kaspar</a> & <a href="https://soundcloud.com/asys" target="_blank">A*S*Y*S</a> - Acid Drill</li>
+          <li>24:28 <a href="https://soundcloud.com/stoltenhoff" target="_blank">PSYCHO BOYS CLUB</a> - Rolling Thunder</li>
+          <li>25:32 <a href="https://soundcloud.com/space92" target="_blank">Space 92</a> - The Door</li>
+          <li>28:12 <a href="https://soundcloud.com/kaspar-de" target="_blank">Kaspar</a> - Out Of The Void</li>
+          <li>30:10 <a href="https://soundcloud.com/official-hilo" target="_blank">HI-LO</a> & <a href="https://soundcloud.com/reinier-zonneveld" target="_blank">Reinier Zonneveld</a> - String Theory</li>
+          <li>33:05 <a href="https://soundcloud.com/baauer" target="_blank">Baauer</a> - HOT 44</li>
+          <li>34:33 <a href="https://soundcloud.com/samwolfemusic" target="_blank">Sam WOLFE</a> & <a href="https://soundcloud.com/killscript" target="_blank">Kill Script</a> - Blackout</li>
+          <li>38:05 <a href="https://soundcloud.com/ranchatek-official" target="_blank">RanchaTek</a> - Let The Bass Kick</li>
+          <li>39:49 <a href="https://soundcloud.com/milo_spykers" target="_blank">Milo Spykers</a> - Infinite</li>
+          <li>44:28 <a href="https://soundcloud.com/patricktopping" target="_blank">Patrick Topping</a> & <a href="https://soundcloud.com/kevinsaunderson" target="_blank">Kevin Saunderson</a> - Frisk</li>
+          <li>46:45 <a href="https://soundcloud.com/destroyers" target="_blank">Destroyers</a> & <a href="https://open.spotify.com/artist/4wU4WSNIbTtdrBC9FRWN74" target="_blank">JGT</a> - Shambhala</li>
+          <li>47:51 <a href="https://soundcloud.com/corvad" target="_blank">Corvard</a> - Take Me</li>
+          <li>49:03 <a href="https://soundcloud.com/alesso" target="_blank">Alesso</a> - Dark</li>
+          <li>49:49 <a href="https://soundcloud.com/baauer" target="_blank">Bauuer</a> - Planet's Mad</li>
+        </ul>
+      </details>
+
+    </article>
+
+    <article>
       <h2>Sub-Zero</h2>
       <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1196270371&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
       <p class="about album-desc">Dragons roam in a windy frozen land tracking down lost travelers. The bone-chilling wind carries far away voices. Secret hidden far EAST is what travelers are searching for. A 5 meters tall heat engine that's humanity's last chance of survival. <br><br> <a href="https://www.space.com/china-artificial-sun-fusion-reactor-five-times-hotter-than-the-sun" target="_blank">China's $1 trillion 'artificial sun' fusion reactor just got five times hotter than the sun</a> <br><br> <small>released January 14, 2022</small></p>
@@ -271,32 +325,6 @@
         </details>
         <p>Awesome illustration was done by <a href="https://surudenise.com" target="_blank">Denise Rashidi</a>.</p>
       </article>
-
-      <!-- <article class="waking-up">
-        <h2>Waking Up</h2>
-        <p class="about">This is the music I play to start my day. Good vibes and gradual build-up of energy. Enjoy!</p>
-        <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1124593771&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
-        <details>
-          <summary>Tracklist</summary>
-          <ol>
-            <li>Everybody Loves The Sunshine [feat. José James] by Takuya Kuroda</li>
-            <li>Morning Walk by Brian Culbertson</li>
-            <li>Ljubav što smo stvorili by irieFM</li>
-            <li>Retold by Nate Smith</li>
-            <li>People by Experience Unlimited</li>
-            <li>By The Time I Get To Phoenix by The Vast Majority</li>
-            <li>ABC by The Jacksons</li>
-            <li>Move That Body by CHANCE デラソウル</li>
-            <li>Want Ads by Soda Machine</li>
-            <li>It's Your Thing by The Isley Brothers</li>
-            <li>Soul Sister by Heatwave</li>
-            <li>Superstition by Stevie Wonder</li>
-            <li>Shining Star by Earth, Wind & Fire</li>
-            <li>I Want To Take You Higher by Sly & The Family Stone</li>
-            <li>Sing a Simple Song by Sly & The Family Stone</li>
-          </ol>
-        </details>
-      </article> -->
 
       <article>
         <h2>Hali Gali: The New Alternative</h2>
