added future funk and disco dance mania, removed sub-zero

--- a/index.html
+++ b/index.html
@@ -47,6 +47,47 @@
     </article>
 
     <article>
+      <h2>Future Funk And Disco Dance Mania</h2>
+      <p class="about">I'm the boogie man on steroids and I present to you purposefully mixed and heavily edited tracks to make your day a little lighter and a bit more fun.</p>
+      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1251470839&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+      
+      <details>
+        <summary>Tracklist</summary>
+        <ul>
+          <li>00:00 Proux - Lemniskate</li>
+          <li>00:54 pomrad - Stir-Me-Nots</li>
+          <li>01:10 Tatham, Mensah, Lord & Ranks - Mr Pickles</li>
+          <li>02:50 Alan Braxe, Fred Falke - Intro</li>
+          <li>05:41 BarbWalters - My Eyes</li>
+          <li>07:04 tuuwa - What a Notion</li>
+          <li>08:49 Color Television - Tonight</li>
+          <li>10:05 Tendencies - Plastic</li>
+          <li>10:47 ev.exi - Forget</li>
+          <li>12:03 Saë - NeoVintage</li>
+          <li>14:30 Aileron - You Should Not Come</li>
+          <li>17:11 acidente - Idea</li>
+          <li>18:08 Classic Files - Too Late</li>
+          <li>18:36 acidente - Idea</li>
+          <li>19:12 Tanuki - Radiant Memories</li>
+          <li>21:25 Engelwood - Lovin' is Everywhere</li>
+          <li>22:18 Fibre - Intro</li>
+          <li>23:39 Mercer - Fireworks</li>
+          <li>25:12 Luanmer - Discotheque ( feat. BreezyDev )</li>
+          <li>27:10 Pop Up! - Rio</li>
+          <li>30:45 Shiruetto - La Musicque</li>
+          <li>32:13 Kue - One World Style</li>
+          <li>33:03 Macross 82-99 - Fun Tonight</li>
+          <li>34:34 Pop Up! - Yep</li>
+          <li>35:41 Fibre - The Only One ( ft. Discandy )</li>
+          <li>37:38 IRIDESENT - The King Of Pop</li>
+          <li>41:09 BarbWalters - Highise ( feat. Doktor Plekter )</li>
+          <li>43:29 pomrad - Stir-Me-Nots</li>
+        </ul>
+      </details>
+
+    </article>
+
+    <article>
       <h2>The Batman 2022 Nightclub Iceberg Lounge Soundtrack Mixtape</h2>
       <iframe src="https://www.youtube.com/embed/OwU6zcpOml4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p >This is what I would play in a peak time slot in Iceberg Lounge ( Printworks ) <br><br> Contains 4 club tracks from The Batman 2022 movie:</p>
@@ -94,11 +135,11 @@
 
     </article>
 
-    <article>
+    <!-- <article>
       <h2>Sub-Zero</h2>
       <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1196270371&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
       <p class="about album-desc">Dragons roam in a windy frozen land tracking down lost travelers. The bone-chilling wind carries far away voices. Secret hidden far EAST is what travelers are searching for. A 5 meters tall heat engine that's humanity's last chance of survival. <br><br> <a href="https://www.space.com/china-artificial-sun-fusion-reactor-five-times-hotter-than-the-sun" target="_blank">China's $1 trillion 'artificial sun' fusion reactor just got five times hotter than the sun</a> <br><br> <small>released January 14, 2022</small></p>
-    </article>
+    </article> -->
 
     <article>
       <h2>DJ 3maj - Meaning Crisis</h2>
