transformed it into a lair

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
-  <title>DJ 3maj's Mixtapes</title>
-  <meta name="description" content="DJ 3maj's Mixtapes is where you can find all of his mixtapes and their tracklists.">
+  <title>DJ 3maj's Lair</title>
+  <meta name="description" content="DJ 3maj's lair is my musical journal for my attempts at production and DJing. I don't take myself too seriously and I post almost all of my musical experiments. I'm open for collaborations.">
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="favicon.ico">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TGLM00G2L"></script>
+  <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap" rel="stylesheet"> -->
+  <link rel="icon"  href="./assets/images/logo (2).PNG">
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TGLM00G2L"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -23,11 +23,12 @@
         'event_label': name
       });
     }
-  </script>
+  </script> -->
 </head>
 <body>
   <header>
-    <h1 class="title">DJ 3maj's Mixtapes</h1>
+    <h1 class="title">DJ 3maj's Lair</h1>
+    <img src="./assets/images/logo (2).PNG" alt="Logo">
     <nav>
       <a href="https://www.instagram.com/jazar_todorovic/" target="_blank">Instagram</a>
       <a href="https://open.spotify.com/artist/0BTM5Hw0FHPXB8sqMddLqk" target="_blank">Spotify</a>
@@ -35,9 +36,10 @@
       <a href="https://dj3maj.bandcamp.com/" target="_blank">Bandcamp</a>
       <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA" target="_blank">YouTube</a>
       <a href="https://www.mixcloud.com/dj-3maj" target="_blank">Mixcloud</a>
+      <a href="mailto:dj.3maj.music@gmail.com">Email</a>
     </nav>
   </header>
-
+<!-- 
   <main>
 
     <article>
@@ -135,11 +137,11 @@
 
     </article>
 
-    <!-- <article>
+    <article>
       <h2>Sub-Zero</h2>
       <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1196270371&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
       <p class="about album-desc">Dragons roam in a windy frozen land tracking down lost travelers. The bone-chilling wind carries far away voices. Secret hidden far EAST is what travelers are searching for. A 5 meters tall heat engine that's humanity's last chance of survival. <br><br> <a href="https://www.space.com/china-artificial-sun-fusion-reactor-five-times-hotter-than-the-sun" target="_blank">China's $1 trillion 'artificial sun' fusion reactor just got five times hotter than the sun</a> <br><br> <small>released January 14, 2022</small></p>
-    </article> -->
+    </article>
 
     <article>
       <h2>DJ 3maj - Meaning Crisis</h2>
@@ -519,6 +521,6 @@
       <nav>
         <a href="https://www.buymeacoffee.com/lazar.todorovic" target="_blank">Buy me a cup of ☕</a>
       </nav>
-  </footer>
+  </footer> -->
 </body>
 </html>
