--- a/index.html
+++ b/index.html
@@ -26,18 +26,26 @@
   </script> -->
 </head>
 <body>
+  <script src="./cursor.js"></script>
+  <video playsinline autoplay muted loop>
+    <source src="./assets/videos/black hole.mp4" type="video/mp4">
+  </video>
+
   <header>
-    <h1 class="title">DJ 3maj's Lair</h1>
-    <img src="./assets/images/logo (2).PNG" alt="Logo">
+    <!-- <h1 class="title">DJ 3maj's Lair</h1> -->
+    
     <nav>
-      <a href="https://www.instagram.com/jazar_todorovic/" target="_blank">Instagram</a>
+      <a class="main-link" href="https://soundcloud.com/sablast"><img src="./assets/images/logo (2).PNG" alt="Logo"></a>
+      
+      <!-- <a href="https://www.instagram.com/jazar_todorovic/" target="_blank">Instagram</a>
       <a href="https://open.spotify.com/artist/0BTM5Hw0FHPXB8sqMddLqk" target="_blank">Spotify</a>
       <a href="https://soundcloud.com/sablast" target="_blank">Soundcloud</a>
       <a href="https://dj3maj.bandcamp.com/" target="_blank">Bandcamp</a>
       <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA" target="_blank">YouTube</a>
       <a href="https://www.mixcloud.com/dj-3maj" target="_blank">Mixcloud</a>
-      <a href="mailto:dj.3maj.music@gmail.com">Email</a>
+      <a href="mailto:dj.3maj.music@gmail.com">Email</a> -->
     </nav>
+    <!-- <img src="./assets/images/logo (2).PNG" alt="Logo"> -->
   </header>
 <!-- 
   <main>
